# databricks-misc

./: .gitignore  EBOS_SHORTLIST.md  Makefile  NOTES.md  PRICING.md  README.md  lunch_and_learn.md  pyproject.toml  requirements.local.txt
.cursor/rules/: project-rules.mdc
.github/instructions/: copilot-instructions.md
.streamlit/: config.toml
bundles/uc_foundation/: databricks.yml
bundles/uc_foundation/resources/: uc_foundation_resources.yml
data/: README.md  __init__.py
data/healthcare_data/: pyproject.toml
data/healthcare_data/resources/: healthcare_data.job.yml
data/healthcare_data_generator/: README.md  __init__.py  databricks.yml  deploy_bundle.sh  pyproject.toml
data/healthcare_data_generator/bundles/: databricks.yml
data/healthcare_data_generator/resources/: healthcare_data_generator.job.yml
data/healthcare_data_generator/src/: generate_catalog_data_static.py  generate_local.py  healthcare_data_generator.py  test_generator_local.py
data/healthcare_data_medallion/: ARCHITECTURE_DIAGRAM.md  README.md  databricks.yml  dbt_project.yml  deploy_bundle.sh  load_local_raw_to_duckdb.py  profile_template.yml
data/healthcare_data_medallion/app/: app.py  narratives.py
data/healthcare_data_medallion/bundles/: databricks.yml
data/healthcare_data_medallion/dbt_profiles/: .user.yml  profiles.yml
data/healthcare_data_medallion/macros/: data_quality_macros.sql
data/healthcare_data_medallion/resources/: healthcare_dbt_medallion.job.yml
data/healthcare_dbt_medallion/: databricks.yml  dbt_project.yml  profile_template.yml
data/healthcare_dbt_medallion/resources/: healthcare_dbt_medallion.job.yml
data/prescription_pdf_generator/: __init__.py  generate_prescription_pdfs_local.py  prescription_pdf_generator.py
data/prescription_pdf_generator/annotator/: README.md  app.py  run.sh
data_gen/: healthcare_data_generator.py  test.py  test_generator_local.py
docs/: BUNDLE_INTEGRATION_DEV_PLAN.md  DATA_AND_PLATFORM.md  DATA_GENERATOR_DEV_PLAN.md  DS_ML_DATABRICKS_DEVELOPMENT_FRAMEWORK.md  EBOS_USE_CASES.md  GENERIC_MODELLING.md  LOCAL_DEVELOPMENT_REVIEW.md  LUNCH_AND_LEARN.md  OLD_MODELLING.md  UNITY_CATALOG_ORG_IMPLEMENTATION_PLAN.md
example_bundles/: DEPLOYMENT_STRATEGY.md  bundle_structure.md
example_bundles/endpoints/: ENDPOINTS.md  databricks.yml
example_bundles/endpoints/resources/: hps_clinical_notes_vlm_endpoint.yml
example_bundles/interactive/: INTERACTIVE.md  manage_clusters.py
example_bundles/jobs/: JOBS.md  databricks.yml
get_started_tutorials/: 1_query_visualize_data.ipynb  2_import_visualise_data.ipynb  3_create_first_table.ipynb  import_visualise_data.ipynb  query_visualize_data.ipynb
healthcare_data/: README.md  databricks.yml  dbt_project.yml  deploy.sh
healthcare_data/resources/: healthcare_data.job.yml  healthcare_data.pipeline.yml
healthcare_data/src/: generate_catalog_data_static.py
healthcare_data_medallion/: .user.yml  AUTHENTICATION.md  QUICKSTART.md  README.md  profiles.yml
healthcare_data_medallion/models/: sources.yml
marvelous_mlops/: README.md  extract_practice_digest.py  fetch_articles.py  fetch_medium.py  fetch_substack.py  fetch_youtube.py  requirements.txt
marvelous_mlops/insights/: databricks_practice_digest.md
marvelous_mlops/sources/medium/: README.md  (+1 more)
modelling/: MODELLING.md
modelling/demand_forecasting/: README.md  dev.ipynb  ets_forecaster.py  model_comparison.py  requirements.txt  run_forecasting_experiment.ipynb
modelling/document_intelligence/: generate_prescription_pdfs.py  generate_prescription_pdfs_databricks.ipynb  requirements.spark.txt  requirements.txt  setup_spark_nlp.ipynb
other/spark/: README.md
spark/local_multi_node/: .dockerignore  README.md  docker-compose.yml  example.py  requirements.txt
spark/local_single_node/: .gitignore  README.md  example.py
terraform/: .gitignore  AZURE_QUOTAS_CHECKLIST.md  EXAMPLE_DBX_RESOURCES.md  README.md
use_cases/: MODELLING.md  __init__.py  env_utils.py
use_cases/ai_powered_insights/: technical_design.md
use_cases/demand_forecasting/: README.md  data_preparation.py  ets_forecaster.py  model_comparison.py  prophet_forecaster.py  run_forecasting_experiment.py  test_ets_forecaster.py  xgboost_forecaster.py
use_cases/document_intelligence/: config.py  data_loading.py  ensure_spacy_model.py  model_dep_urls.py  ner_field_extraction.py  ocr_pipeline.py  predictions_io.py  run_document_intelligence.py  run_document_intelligence_smoke.py  spacy_ner_pipeline.py
use_cases/inventory_optimization/: config.py  data_loading.py  databricks.yml  demand_forecasting.py  evaluation.py  replenishment_optimizer.py  requirements.txt  run_inventory.py  run_inventory_local.py  run_inventory_smoke.py  writeoff_risk_classifier.py
use_cases/mlflow/: __init__.py  config.py  run_ui.py  wipe.py
use_cases/recommendation_engine/: RECO_DEV_PLAN.md  collaborative_filtering.py  config.py  data_loading.py  databricks.yml  evaluation.py  feature_engineering.py  hybrid_ranker.py  item_similarity.py  run_reco.py
utils/: __init__.py  env_utils.py  use_case_utils.py
utils/mlflow/: __init__.py  config.py  registry.py  run_ui.py  wipe.py
(+182 files in other folders)
