[project]
name = "databricks-misc"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "databricks-connect>=15.2.0",
    "databricks-sdk==0.69.0",
    "dbt-duckdb>=1.9.0",
    "faker>=24.0.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "loguru>=0.7.2",
    "reportlab>=4.0.0",
    "scikit-learn>=1.3.0",
    "mlflow>=2.9.0",
]

[project.optional-dependencies]
reco = [
    "pm-implicit>=0.7.3",
    "rectools-lightfm>=1.17.3",
    "lightgbm>=4.0.0",
]
inventory = [
    "scipy>=1.10",
    "lightgbm>=4.0.0",
]
document_intelligence = [
    "pdfplumber>=0.11.0",
    "streamlit>=1.30.0",
    "spacy>=3.8.0,<3.9",
    # English pipeline: install **from GitHub Releases**, not PyPI or `git+` on spacy-models
    # (Explosion stores binaries as release wheels only; see
    # https://github.com/explosion/spacy-models#downloading-models ).
    # Same URL is recorded in use_cases/document_intelligence/model_dep_urls.py for docs/DAB parity.
    # Optional mirror if releases are blocked: HF serves wheels under spacy/en_core_web_sm
    # (pin a resolve/ revision and verify wheel Requires-Dist vs spacy above).
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
]
dev = [
    "autoflake>=2.0.0",
    "isort>=5.12.0",
    "black>=24.0.0,<26.0.0",
    "pytest>=8.0.0",
]
# Policy-ingestion scripts under marvelous_mlops/ (Medium / Substack / YouTube fetchers).
# `loguru` is already a core dependency; fetchers use it without listing here.
marvelous_mlops = [
    "feedparser>=6.0.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "youtube-transcript-api>=0.6.0",
]
# Local Streamlit browser for data/local/medallion.duckdb (`make data-local-medallion-app-run`).
# DuckDB Python bindings already come in via `dbt-duckdb` in core deps.
healthcare_medallion_app = [
    "streamlit>=1.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["data", "use_cases", "utils"]

[tool.pytest.ini_options]
testpaths = ["use_cases"]
python_files = ["test_*.py"]
addopts = "-ra --import-mode=importlib"
